[gd_scene format=3 uid="uid://c7rddg2fnhrra"]

[ext_resource type="PackedScene" uid="uid://03s4l0q2exir" path="res://scenes/generic/vessel.tscn" id="1_kv8t8"]
[ext_resource type="Script" uid="uid://b6gekfcngs8rt" path="res://scenes/char/rat.gd" id="1_r0al0"]
[ext_resource type="Texture2D" uid="uid://dsxg4vu6pq4wb" path="res://assets/graphics/characters/rat.png" id="2_kv8t8"]
[ext_resource type="Texture2D" uid="uid://c4of0xcfn0cpy" path="res://assets/graphics/characters/sword_slash.png" id="3_uhvhy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uhvhy"]
radius = 3.0769234
height = 20.000002

[sub_resource type="AtlasTexture" id="AtlasTexture_em1bs"]
atlas = ExtResource("3_uhvhy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rn35"]
atlas = ExtResource("3_uhvhy")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjrfb"]
atlas = ExtResource("3_uhvhy")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_se30j"]
atlas = ExtResource("3_uhvhy")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktwa8"]
atlas = ExtResource("3_uhvhy")
region = Rect2(0, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibi11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_em1bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rn35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjrfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se30j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktwa8")
}],
"loop": false,
"name": &"default",
"speed": 18.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lchkc"]
radius = 12.0
height = 52.0

[node name="Rat" unique_id=517857439 instance=ExtResource("1_kv8t8")]
collision_layer = 32
script = ExtResource("1_r0al0")
max_health = 4

[node name="CollisionShape2D" parent="." index="0" unique_id=137211241]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_uhvhy")

[node name="Sprite2D" parent="." index="1" unique_id=416849066]
texture = ExtResource("2_kv8t8")

[node name="Attack Cooldown" type="Timer" parent="." index="2" unique_id=1209005208]
wait_time = 1.2
one_shot = true

[node name="Attacks" type="Node2D" parent="." index="3" unique_id=643372423]

[node name="UpAttack" type="Area2D" parent="Attacks" index="0" unique_id=1979182126]
position = Vector2(0, -7.6923075)
scale = Vector2(0.35, 0.35)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/UpAttack" index="0" unique_id=159343114]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_ibi11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/UpAttack" index="1" unique_id=58644359]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_lchkc")
disabled = true

[node name="LeftAttack" type="Area2D" parent="Attacks" index="1" unique_id=1664553854]
position = Vector2(-13.846156, -0.7692309)
rotation = -1.5707964
scale = Vector2(0.35, 0.35)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/LeftAttack" index="0" unique_id=626248311]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_ibi11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/LeftAttack" index="1" unique_id=1165144829]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_lchkc")
disabled = true

[node name="DownAttack" type="Area2D" parent="Attacks" index="2" unique_id=526612066]
position = Vector2(1.1920929e-07, 6.9230776)
rotation = -3.1415925
scale = Vector2(0.35, 0.35)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/DownAttack" index="0" unique_id=860304868]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_ibi11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/DownAttack" index="1" unique_id=1068676170]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_lchkc")
disabled = true

[node name="RightAttack" type="Area2D" parent="Attacks" index="3" unique_id=804852466]
position = Vector2(13.846156, -0.7692309)
rotation = 1.5707964
scale = Vector2(0.35, 0.35)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/RightAttack" index="0" unique_id=249652837]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_ibi11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/RightAttack" index="1" unique_id=1437650574]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_lchkc")
disabled = true

[connection signal="body_entered" from="Attacks/UpAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/UpAttack/AnimatedSprite2D" to="." method="_on_up_atk_anim_finished"]
[connection signal="body_entered" from="Attacks/LeftAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/LeftAttack/AnimatedSprite2D" to="." method="_on_left_atk_anim_finished"]
[connection signal="body_entered" from="Attacks/DownAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/DownAttack/AnimatedSprite2D" to="." method="_on_down_atk_anim_finished"]
[connection signal="body_entered" from="Attacks/RightAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/RightAttack/AnimatedSprite2D" to="." method="_on_right_atk_anim_finished"]
